release/1.16.2/VERSION.md
# 1.16.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.16.2```   |
| Release Time   | ```2020-08-11T10:13:46+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.16```   |
| sha1   | ```f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2```   |
| size   | ```295227```   |
| total size  | ```334438503```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2/1.16.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```653e97a2d1d76f87653f02242d243cdee48a5144```   |
| size   | ```17505439```   |
| url       | ```https://piston-data.mojang.com/v1/objects/653e97a2d1d76f87653f02242d243cdee48a5144/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c5f6fb23c3876461d46ec380421e42b289789530```   |
| size   | ```37942337```   |
| url       | ```https://piston-data.mojang.com/v1/objects/c5f6fb23c3876461d46ec380421e42b289789530/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |