release/1.16.3/VERSION.md
# 1.16.3

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.16.3```   |
| Release Time   | ```2020-09-10T13:42:37+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.16```   |
| sha1   | ```f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2```   |
| size   | ```295227```   |
| total size  | ```334438503```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2/1.16.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```1321521b2caf934f7fc9665aab7e059a7b2bfcdf```   |
| size   | ```17505781```   |
| url       | ```https://piston-data.mojang.com/v1/objects/1321521b2caf934f7fc9665aab7e059a7b2bfcdf/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```f02f4473dbf152c23d7d484952121db0b36698cb```   |
| size   | ```37942656```   |
| url       | ```https://piston-data.mojang.com/v1/objects/f02f4473dbf152c23d7d484952121db0b36698cb/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |